--- a/index.html
+++ b/index.html
@@ -57,38 +57,37 @@
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Enviar</button>
             </form>
+            <p id="responseMessage" class="text-center mt-3"></p>
         </div>
     </div>
 
-    <!-- Bootstrap Bundle with Popper -->
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
-    </script>
     <script>
-        document.getElementById('songForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
-            
-            const nickname = document.getElementById('nickname').value;
-            const youtubeLink = document.getElementById('youtubeLink').value;
+        const form = document.getElementById('songForm');
+        const responseMessage = document.getElementById('responseMessage');
+
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const formData = new FormData(form);
 
             try {
                 const response = await fetch('https://script.google.com/macros/s/AKfycbyuztfSMu9IVoj8tdR-J-lM5BiMf_kqW6FU4Q5R3iaTVZ6xNyOqhTqlcfLNL8vaRu1b/exec', {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ nickname, youtubeLink }),
+                    body: formData
                 });
 
-                const result = await response.json();
                 if (response.ok) {
-                    alert('Datos enviados correctamente: ' + result.message);
+                    responseMessage.textContent = 'Canción enviada con éxito.';
+                    responseMessage.style.color = 'green';
+                    form.reset();
                 } else {
-                    alert('Error: ' + result.error);
+                    responseMessage.textContent = 'Error al enviar la canción.';
+                    responseMessage.style.color = 'red';
                 }
             } catch (error) {
-                console.error('Error:', error);
-                alert('Hubo un problema al enviar los datos.');
+                responseMessage.textContent = 'Error de conexión.';
+                responseMessage.style.color = 'red';
+                console.error(error);
             }
         });
     </script>
