--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2 class="text-center mb-4">Ingresa tu Canción</h2>
             <form id="songForm">
                 <div class="mb-3">
-                    <label for="nickname" class="form-label">Apodo</label>
+                    <label for="nickname" class="form-label">😎Apodo:</label>
                     <input 
                         type="text" 
                         class="form-control" 
@@ -51,7 +51,7 @@
                         required>
                 </div>
                 <div class="mb-3">
-                    <label for="youtubeLink" class="form-label">Enlace de YouTube</label>
+                    <label for="youtubeLink" class="form-label">🎵Coloca el enlace de tu canción: ✨🎶</label>
                     <input 
                         type="url" 
                         class="form-control" 
