--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 });
 
                 if (response.ok) {
-                    responseMessage.textContent = 'Canción enviada con éxito.';
+                    responseMessage.textContent = 'Canción enviada con éxito, pronto se producirá en la playlist 🎶✨💡';
                     responseMessage.style.color = 'green';
                     form.reset();
                 } else {
